# kafka-spark-streaming

streaming/data_ingestion/: .gitignore  README.md  build.sh  pyproject.toml
streaming/data_ingestion/data_ingestion/: lambda_function.py  producer.py
streaming/pyspark_streaming/: .gitignore  README.md  pyproject.toml
streaming/pyspark_streaming/pyspark_streaming/: config.py  data_ingestion.py  parallelize_streaming.py  redit_oauth.py  streaming.py  structured_streaming.py
